2010-12-04  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac: Fixed typo.

	* configure.ac, config/x_ac_getgrent.m4: Added X_AC_GETGRENT.

	* configure.ac: Added autoconf check for sysconf().

	* configure.ac: Moved X_AC_SELECT_AUTH_METHOD to end.

2010-11-04  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_update): Set t_last_update to the time of
	  the last successful update instead of the GIDS_GROUP_FILE mtime.

	* src/munged/gids.c (_gids_update): Minor cosmetic changes.

	* src/munged/gids.c (gids_create, _gids_update): Fixed do_group_stat
	  not being protected by the gids mutex.  A minor race-condition
	  could occur if a SIGHUP was received towards the beginning of
	  _gids_update().  Now the mutex is held while do_group_stat is copied.
	  And since the mutex is being acquired at the top of _gids_update,
	  t_last_update has been moved into the gids struct as well.

2010-11-03  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_hash_create): Minor cosmetic changes.

	* src/munged/gids.c (_gids_user_to_uid): Made errors inserting into the
	  uid hash nonfatal since they are just a performance optimization.

	* src/munged/gids.c: Minor cosmetic changes.

	* src/munged/gids.h (gids_is_member): Fixed comment.

	* : Re-bootstrap'd with autoconf-2.67.

2010-09-21  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.1.in, src/munge/remunge.1.in, src/munge/unmunge.1.in,
	  src/libmunge/munge.3.in, src/libmunge/munge_ctx.3.in,
	  src/libmunge/munge_enum.3.in, src/libcommon/munge.7.in,
	  src/munged/munged.8.in: Tweaked manpages.  Updated content.
	  Fixed typos and formatting.

	* README: Tweaked usage formatting.

	* src/libcommon/license.c: Tweaked spacing in license_text[].

2010-09-08  Chris Dunlap  <cdunlap@llnl.gov>

	* : Replaced _cipher_map_enum() & _md_map_enum() case statements with
	  static array lookups resulting in a slight performance improvement.
	  The cipher_init_subsystem() & md_init_subsystem() routines were added